{{$NEXT}}

0.68     2017-09-29

- Fixed heisenbug that could cause displaying constructor params (in verbose
  mode) to omit most of the parameter values.


0.67     2017-09-18

- Move "cmd" attribute back to Code::TidyAll::Plugin. Moving this to a role in
  0.66 broke plugins which run external commands but which don't ship with
  this distro. Reported by Greg Oschwald. GH #82.


0.66     2017-09-17

- The tidyall command line app now takes a --plugins option. This allows you
  to limit tidyall to running just the selected plugin(s).


0.65     2017-08-01

- A file under Git which had a status of "copied" would cause uninitialized
  value warnings from a pre-commit hook. Reported by Nigel Metheringham with
  help from Adam Herzog. GH #81.


0.64     2017-07-31

- Bug fixes on Windows. Now all plugins except PodSpell (which requires
  ispell) should work on Windows. This should all fix test failures seen in
  CPANTesters on Windows.


0.63     2017-07-23

- All plugins should now work when run against paths that include
  spaces. Previously, many plugins would fail because they were calling system
  commands by passing a single string rather than a list of arguments. Note
  that we now parse the "argv" given in the config file use
  Text::ParseWords::shellwords. It's possible that this could break your setup
  if you have some very pathological configuration options. Bug reports are
  welcome. Fixes #79.


0.62     2017-07-20

- Added support for a global config option "inc". This allows you to prepend
  directories to @INC when running tidyall. This affects both loading classes
  and running plugins. This is equivalent to the command line's -I option.


0.61     2017-07-07

- Fixed a Git pre-commit hook stash bug. The hook would always call "git stash
  pop" even if the call it had just made to "git stash" hadn't added anything
  to the stash. If the stash had anything on it, this could make a mess of